Password alignment issue

--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -45,6 +45,7 @@
   outline: none !important;
   transition: 0.3s !important;
   font-size: 14px !important;
+  box-sizing: border-box !important;
 }
 .input-group input:focus {
   border-color: #2c5364 !important;
@@ -61,12 +62,12 @@ input[type="password"]::-webkit-credentials-auto-fill-button {
 }
 .password-wrapper {
   position: relative !important;
-  display: flex !important;
-  align-items: center !important;
+  width: 100% !important;
 }
 .password-wrapper input {
   width: 100% !important;
-  padding-right: 40px !important;
+  padding-right: 42px !important;
+  box-sizing: border-box !important;
 }
 .toggle-password {
   position: absolute !important;
@@ -81,7 +82,7 @@ input[type="password"]::-webkit-credentials-auto-fill-button {
   position: relative !important;
 }
 .password-group input {
-  padding-right: 42px !important;
+  padding-right: 40px !important;
 }
 .forgot-row {
   text-align: right !important;
